samples/_failures_safe/1761692164_76ae2e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_242cbded.c:187: error: expected ‘;’, ‘,’ or ‘)’ at end of input
